<resources>
    <string name="app_name">Krispy Kreme</string>

    <!-- Log in flds-->
    <string name="strLogin">Log in</string>

    <!-- Log in | Sign up-->
    <string name="strEmail">Email: </string>
    <string name="strPassword">Password: </string>

    <!-- Sign up -->
    <string name="strSignup">Sign Up </string>
    <string name="strFName">First Name: </string>
    <string name="strLName">Last Name: </string>
    <string name="strMName">Middle Name: </string>
    <string name="strPhone">Phone: </string>
    <string name="strConfirmPassword">Confirm Password: </string>

    <!-- Dashboard (User mode)-->
    <string name="strDashboard">Dashboard</string>
    <string name="strMenu">Menu</string>
    <string name="strCart">Cart</string>
    <string name="strProfile">Profile</string>
    <string name="strOrderHistory">Order History</string>
    <string name="strOrder">Order</string>

    <!-- Fields (Profile) -->
    <string name="strEditProfile">Edit Profile</string>
    <string name="strName">Name: </string>
    <string name="strEditInfo">Edit Information</string>
    <string name="strSave">Save</string>

    <!-- Buttons -->
    <string name="strRegister">Register</string>
    <string name="strEnter">Enter</string>
    <string name="strClear">Clear</string>
    <string name="strAdd">Add</string>
    <string name="strInsert">Insert</string>
    <string name="strEdit">Edit</string>
    <string name="strUpdate">Update</string>
    <string name="strDelete">Delete</string>
    <string name="strRemove">Remove</string>
    <string name="strBack">Back</string>
    <string name="strCancel">Cancel</string>
    <string name="strLogout">Logout</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dashboard</string>
    <string name="nav_header_subtitle">Username</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="appbar_scrolling_view_behavior">appbar_scrolling_view_behavior</string>

    <!-- Dashboard -->
    <string name="strOpen">Open</string>
    <string name="strClose">Close</string>
    <string name="sign_out">Sign Out</string>
    <string name="order">Order</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="strMenuName">Name of the Menu</string>
    <string name="strMenuPrice">Menu Price</string>
    <string name="str_create_an_account">Create an Account</string>
    <string name="str_product_name">Product Name</string>
    <string name="strTotal">Total:</string>
    <string name="str_place_order">Place Order</string>
    <string name="title_activity_user_info">UserInfo</string>
</resources>
